--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the image 
-      run: docker build . --file Dockerfile --tag vgafib/web-cursos:${{ github.event.number }}
+      run: docker build . --file Dockerfile --tag vgafib/web-ggj:${{ github.event.number }}
     
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -26,10 +26,10 @@ jobs:
       
     - name: Push image
       run: |
-        docker push vgafib/web-cursos:${{ github.event.number }}
-        docker image tag vgafib/web-cursos:${{ github.event.number }} vgafib/web-cursos:latest
-        docker push vgafib/web-cursos:latest
+        docker push vgafib/web-ggj:${{ github.event.number }}
+        docker image tag vgafib/web-ggj:${{ github.event.number }} vgafib/web-ggj:latest
+        docker push vgafib/web-ggj:latest
         
     - name: Cleanup
-      run: docker rmi vgafib/web-cursos:${{ github.event.number }} vgafib/web-cursos:latest
+      run: docker rmi vgafib/web-ggj:${{ github.event.number }} vgafib/web-ggj:latest
         
