--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,7 @@
 name: Docker Image CI
 run-name: Push image to Docker Hub (PR \#${{ github.event.number }}) by @${{ github.event.sender.login }}
 
-on:
-  pull_request:
-    types:
-      - closed
-    branches: 
-      - 'master'
+on: workflow_dispatch
 
 jobs:
   build:
