--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Build the image 
-      run: docker build . --file Dockerfile --tag vgafib/web-ggj:${{ github.event.number }}
+      run: docker build . --file Dockerfile --tag vgafib/web-ggj:${{ github.sha }}
     
     - name: Login to Docker Hub
       uses: docker/login-action@v2
