--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,24 +1,16 @@
 name: Docker Image CI
 run-name: Push image to Docker Hub (PR \#${{ github.event.number }}) by @${{ github.event.sender.login }}
 
-on:
-  pull_request:
-    types:
-      - closed
-    branches: 
-      - 'master'
+on: workflow_dispatch
 
 jobs:
   build:
-    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        ref: "${{ github.event.pull_request.merge_commit_sha }}"
     
     - name: Build the image 
-      run: docker build . --file Dockerfile --tag vgafib/web-ggj:${{ github.event.number }}
+      run: docker build . --file Dockerfile --tag vgafib/web-ggj:${{ github.sha }}
     
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -28,10 +20,10 @@ jobs:
       
     - name: Push image
       run: |
-        docker push vgafib/web-ggj:${{ github.event.number }}
-        docker image tag vgafib/web-ggj:${{ github.event.number }} vgafib/web-ggj:latest
+        docker push vgafib/web-ggj:${{ github.sha }}
+        docker image tag vgafib/web-ggj:${{ github.sha }} vgafib/web-ggj:latest
         docker push vgafib/web-ggj:latest
         
     - name: Cleanup
-      run: docker rmi vgafib/web-ggj:${{ github.event.number }} vgafib/web-ggj:latest
+      run: docker rmi vgafib/web-ggj:${{ github.sha }} vgafib/web-ggj:latest
         
